objects/Prank__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Prank_Description__c</fullName>
        <label>Prank Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prank_Score__c</fullName>
        <inlineHelpText>Prank score on scale from 1-5</inlineHelpText>
        <label>Prank Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prankee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prankee</label>
        <referenceTo>Prankster__c</referenceTo>
        <relationshipLabel>Pranks Against</relationshipLabel>
        <relationshipName>PranksAgainst</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pranker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pranker</label>
        <referenceTo>Prankster__c</referenceTo>
        <relationshipLabel>Pranks Achieved</relationshipLabel>
        <relationshipName>PranksAchieved</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Prank</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Pranker__c</columns>
        <columns>Prankee__c</columns>
        <columns>Prank_Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P!!-{0000}</displayFormat>
        <label>Prank</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pranks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>